@@ -45,7 +45,7 @@ namespace Orthanc
                                bool& last,
                                const RestApiGetCall& call)
   {
-    static const unsigned int MAX_RESULTS = 100;
+    static const unsigned int DEFAULT_LIMIT = 100;
     
     if (call.HasArgument("last"))
     {
@@ -58,16 +58,13 @@ namespace Orthanc
     try
     {
       since = boost::lexical_cast<int64_t>(call.GetArgument("since", "0"));
-      limit = boost::lexical_cast<unsigned int>(call.GetArgument("limit", "0"));
+      limit = boost::lexical_cast<unsigned int>(call.GetArgument("limit", boost::lexical_cast<std::string>(DEFAULT_LIMIT)));
     }
     catch (boost::bad_lexical_cast&)
     {
+      since = 0;
+      limit = DEFAULT_LIMIT;
       return;
-    }
-
-    if (limit == 0 || limit > MAX_RESULTS)
-    {
-      limit = MAX_RESULTS;
     }
   }
 
